@@ -1,3 +1,6 @@
+2014-12-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/security-util.c: Change debuging level.
+
 2014-12-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/robot.pm: Use tapelist label only if the slot is
 	  in SLOT_UNKNOWN state.
